correctly aligned toast icons

--- a/public/css/tooltip.css
+++ b/public/css/tooltip.css
@@ -25,8 +25,8 @@
 }
 
 .toast i {
-  margin: 0 1.5rem;
-  font-size: 35px;
+  margin: 0rem 1rem 0.35rem 1rem;
+  font-size: 2.5rem;
 }
 
 .toast::after {
